[BED-23] Add PotionsGui
Took 34 minutes